# mk-eda_frontend

./: .gitignore  README.md  pyproject.toml
benchmarks/all_aig_graphs/: README.md
benchmarks/all_aig_graphs/classes/: functions_classes2.txt  functions_classes3.txt  functions_classes4.txt
benchmarks/all_aig_graphs/graphs_aig/: graphs_2_var.jsonl  graphs_3_var.jsonl
benchmarks/different_classes_graphs/: README.md  const.jsonl  random.jsonl  random_size.jsonl  random_size_xor.jsonl  small.jsonl  standard.jsonl
mk_eda/libs/aig/: aig.py
mk_eda/libs/common/: constants.py  functions.py  logger.py
mk_eda/libs/converter/: converter_to_aig.py
mk_eda/libs/functions/: boolean_matching.py  mincode_generator.py
mk_eda/scripts/: archive_json.py  check_equivalence.py  create_all_tests.py  cut_circuit.py  evaluate_aig.py  inv_congruent_classes.py  run_aig_complexity_optimizer.py  run_boolean_matching.py  run_depth_partitioner.py  run_mincode_generator.py  run_random_aig_generator.py  run_rewriting.py  run_sat.py  run_tests_verification.py  run_translate.py  run_vector_to_aig_converter.py  run_xaig_complexity_optimizer.py  run_xaig_depth_optimizer.py  take_file_from_disk.py  unzip_in_json.py
tests/verification/: test_add_delete.json  test_aig_1_d.json  test_aig_1_g.json  test_aig_2_d.json  test_aig_2_g.json  test_aig_3_d.json  test_aig_3_g.json  test_aig_4.json  test_aig_const.json  test_aig_inputs.json  test_equ_1_d.json  test_equ_1_g.json  test_equ_2_d.json  test_equ_2_g.json  test_or_1_d.json  test_or_1_g.json  test_xor_1_d.json  test_xor_1_g.json
(+143 files in other folders)
