[tool.poetry]
name = "mk-eda"
version = "1.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "mk_eda"}]

[tool.poetry.dependencies]
python = ">=3.9, <3.13"
pyeda = [
    {markers = "sys_platform == 'win32'", url ="https://download.lfd.uci.edu/pythonlibs/archived/pyeda-0.28.0-cp39-cp39-win_amd64.whl"},
    {markers = "sys_platform != 'win32'", version = "^0.28.0", source = "pypi"},
]
ply = "3.9"
pytest-cov = "^4.1.0"
typing-extensions = "^4.10.0"

[tool.poetry.group.gui.dependencies]
pyside6 = "6.6.3"

[tool.poetry.group.dev.dependencies]
ipython = "^8.16.1"
pre-commit = "^3.5.0"
pytest = "^7.4.2"
pyright = "1.1.351"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
